--- a/TPC_Clinica_equipo-b/presentacion/SiteMaster.Master
+++ b/TPC_Clinica_equipo-b/presentacion/SiteMaster.Master
@@ -14,10 +14,10 @@
 </head>
 <body>
     <form id="form1" runat="server" class="d-flex flex-column min-vh-100">
-        <!-- Navbar -->
+        <!-- Header -->
         <header>
+            <!-- Navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-
                 <div class="container-fluid">
                     <a class="navbar-brand" href="">🚑 Clínica Médica</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" title="Toggle navigation">
@@ -46,7 +46,7 @@
             </nav>
         </header>
 
-
+        <!-- Body -->
         <div class="flex-grow-1">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
