--- a/TPC_Clinica_equipo-b/presentacion/assets/styles/style.css
+++ b/TPC_Clinica_equipo-b/presentacion/assets/styles/style.css
@@ -2,9 +2,6 @@
     text-decoration: none;
 }
 
-body {
-}
-
 .login-box {
     background-color: #f9f9f9;
     align-items: center;
@@ -64,15 +61,15 @@ body {
     }
 
 .icon-circle {
-    width: 44px;
-    height: 44px;
+    width: 2.75rem;
+    height: 2.75rem;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
-    margin-right: 15px;
+    font-size: 1.25rem;
+    margin-right: 0.9375rem;
 }
 
 .btn-text {
