--- a/TPC_Clinica_equipo-b/presentacion/SiteMaster.Master
+++ b/TPC_Clinica_equipo-b/presentacion/SiteMaster.Master
@@ -19,7 +19,7 @@
             <!-- Navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="">🚑 Clínica Médica</a>
+                    <a class="navbar-brand" href="Default.aspx">🚑 Clínica Médica</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" title="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
