--- a/TPC_Clinica_equipo-b/presentacion/SiteMaster.Master
+++ b/TPC_Clinica_equipo-b/presentacion/SiteMaster.Master
@@ -1,7 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="SiteMaster.Master.cs" Inherits="presentacion.SiteMaster" %>
 
 <!DOCTYPE html>
-
 <html>
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -15,9 +14,9 @@
 <body>
     <form id="form1" runat="server" class="d-flex flex-column min-vh-100">
         <asp:ScriptManager runat="server" />
-        <!-- Header -->
+        <%--HEADER--%>
         <header>
-            <!-- Navbar -->
+            <!-- NAVBAR -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="Default.aspx">🚑 Clínica Médica</a>
@@ -26,19 +25,26 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
-                            <!-- Opcional: otras secciones -->
-                            <li class="nav-item me-3">
-                                <li class="nav-item">                                    
-                                    <asp:Button CssClass="btn btn-light text-success me-3" ID="btnIniciarSesion" OnClick="btnIniciarSesion_Click" runat="server"  Text="Iniciar Sesión" />
-                                </li>
+                            <%--BOTÓN INICIAR SESIÓN--%>
+                            <li class="nav-item">
+                                <asp:Button CssClass="btn btn-light text-success me-3" ID="btnIniciarSesion" OnClick="btnIniciarSesion_Click" runat="server" Text="Iniciar Sesión" />
                             </li>
-                            <!-- Dropdown para futuras acciones -->
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="" role="button" data-bs-toggle="dropdown">Opciones
+                            <%--USUARIO LOGUEADO--%>
+                            <li class="nav-item me-3" id="liUsuario" runat="server" visible="false">
+                                <asp:Label ID="lblUsuario" runat="server" CssClass="nav-link text-white fw-bold"></asp:Label>
+                            </li>
+                            <!-- OPCIONES -->
+                            <li class="nav-item dropdown" id="liOpciones" runat="server" visible="false">
+                                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Opciones
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="">Ver perfil</a></li>
-                                    <li><a class="dropdown-item" href="">Cerrar sesión</a></li>
+                                    <li><a class="dropdown-item" href="#">Ver perfil</a></li>
+                                    <li>
+                                        <asp:LinkButton ID="lkbCerrarSesion" runat="server" CssClass="dropdown-item" OnClick="lkbCerrarSesion_Click">
+                                            Cerrar sesión
+                                        </asp:LinkButton>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
@@ -47,19 +53,19 @@
             </nav>
         </header>
 
-        <!-- Main -->
+        <!-- MAIN -->
         <main class="flex-grow-1">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
         </main>
 
-        <!-- Footer -->
+        <!-- FOOTER -->
         <footer class="bg-success text-white text-center py-3 mt-auto">
             <small>&copy; 2025 - Experiencia Universidad.</small>
         </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    <script src="/assets/js/script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+        <script src="/assets/js/script.js"></script>
     </form>
 </body>
 </html>
